# rt-repo-assessment

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: generators.py  logger.py  main.py  output_parsers.py  report.py  test.json
src/chat/: base.py  messages.py  openai.py
src/code_scorer/: code_scorer.py  tree.py
src/config/: config.json  logic_based_scoring.py  paths.py  prompts.yaml  tracked_files.yaml
src/config/scoring/: code_quality_criteria.yaml  dependancies_criteria.yaml  documentation_criteria.yaml  generators.py  license_criteria.yaml  scoring_criteria.yaml  structure_criteria.yaml
src/directory_scorer/: content_based_scorer.py  tree.py
src/documents/: document.py  loaders.py
src/text_splitters/: recursive.py
src/utils/: __init__.py  general.py  llm.py  project_validators.py  repository.py
tests/: conftest.py  test_project_validators.py
